--- a/src/App/Pages/Vault/ViewPage.xaml
+++ b/src/App/Pages/Vault/ViewPage.xaml
@@ -524,7 +524,7 @@
                         <StackLayout StyleClass="box-row">
                             <Label
                                 TextType="Html"
-                                Text="{Binding Cipher.Notes, Mode=OneWay}"
+                                Text="{Binding MDNotes, Mode=OneWay}"
                                 StyleClass="box-value"
                                 LineBreakMode="WordWrap">
                                 <Label.Effects>
